Fix pop modal pop up transitions not working because I had used visibility property. I have decided to use opacity property

--- a/style.css
+++ b/style.css
@@ -65,20 +65,40 @@
     min-height: 100vh;
     min-width: 100vw;
     background-color: var(--content-color);
+    display: grid;
+    gap: 10px;
+    padding: 20px;
+}
+
+.book-card {
+    background-color: var(--card-color);
+    box-shadow: var(--box-shadow);
+    border-radius: 15px;
+    padding: 20px;
+    width: 20vw;
 }
 
 /* Modal */
 .modal-container {
-    /* display: none; */
+    opacity: 0;
     position: fixed;
     left: 0;
     top: 0;
     overflow-y: auto;
     overflow-x: hidden;
     background-color: rgba(0, 0, 0, 0.3);
-    z-index: 2;
     width: 100vw;
     height: 100vh;
+    transition: .5s;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    -ms-transition: .5s;
+    -o-transition: .5s;
+}
+
+.active {
+    opacity: 1;
+    z-index: 2;
 }
 
 .add-book-form {
@@ -94,6 +114,10 @@
     left: 50%;
     top: 20%;
     transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -o-transform: translate(-50%);
     border-radius: 10px;
     box-shadow: var(--box-shadow);
 }
@@ -144,7 +168,7 @@ input[type=text], input[type="number"] {
     right: 0;
     bottom: 0;
     background-color: #ccc;
-    --webkit- transition: .4s;
+    -webkit-transition: .4s;
     transition: .4s;
 }
 
@@ -156,8 +180,8 @@ input[type=text], input[type="number"] {
     left: 4px;
     bottom: 4px;
     background-color: white;
-    -webkit- transition: .4s;
-    transition: .4s;
+    -webkit-transition: .4s;
+     transition: .4s;
 }
 
 input:checked + .slider {
@@ -169,8 +193,8 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-    --webkit- transform: translateX(26px);
-    -ms- transform: translateX(26px);
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
     transform: translateX(26px);
 }
 
@@ -197,7 +221,7 @@ input:checked + .slider:before {
     background-color: #866749;
 }
 
-.close-btn {
+.modal-close-btn {
     position: absolute;
     font-size: 2.3rem;
     right: 10px;
@@ -206,6 +230,6 @@ input:checked + .slider:before {
     cursor: pointer;
 }
 
-.close-btn:hover {
+.modal-close-btn:hover {
     opacity: 1;
 }
